--- a/src/assets/todo.txt
+++ b/src/assets/todo.txt
@@ -1,3 +1,6 @@
+20200226.1147
+Put set default img in a global export settings
+
 20200222.1311
 #without fancy visually
 sales.keep the place order in local or offline and visually 
